# ZaninDetailer

./: .gitignore
Project_BackEnd/: .env.example  docker-compose.yml  pyproject.toml
Project_BackEnd/alembic/: env.py
Project_BackEnd/alembic/versions/: 3855a4d7f1dc_remove_cancellation_token.py  4c46c5281d3b_create_services_table.py  6025237a422d_create_clients_and_appointments_tables.py  6558a3fd1d7f_create_showcases_table.py  7caa2291ddd6_add_brands_image_url_to_services.py
Project_BackEnd/app/: main.py
Project_BackEnd/app/api/v1/: router.py
Project_BackEnd/app/api/v1/endpoints/: appointments.py  auth.py  brands.py  services.py  showcase.py
Project_BackEnd/app/core/: cache.py  config.py
Project_BackEnd/app/dependencies/: auth.py
Project_BackEnd/app/infra/: database.py  google_calendar.py  supabase_client.py  supabase_storage.py
Project_BackEnd/app/models/: __init__.py  appointment.py  brand.py  client.py  service.py  showcase.py
Project_BackEnd/app/repositories/: appointment_repository.py  brand_repository.py  client_repository.py  service_repository.py  showcase_repository.py
Project_BackEnd/app/schemas/: appointment.py  auth.py  brand.py  service.py  showcase.py
Project_BackEnd/app/services/: appointment_service.py  auth_service.py  brand_service.py  service_service.py  showcase_service.py
project_frontend/: README.md  pubspec.yaml  vercel.json
project_frontend/android/app/: build.gradle.kts
project_frontend/ios/Runner.xcodeproj/: project.pbxproj
project_frontend/lib/: main.dart
project_frontend/web/: index.html
(+53 files in other folders)
