[project]
name = "zanindetailer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.0",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.154.0",
    "google-auth-httplib2>=0.2.0",
    "supabase>=2.9.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"